--- a/hezuo.html
+++ b/hezuo.html
@@ -6,7 +6,7 @@
         .banner {
             width: 800px;
             height: 800px;
-            background-color: black;
+            background-color: rgb(165, 115, 115);
             margin: 0 auto;
         }
     </style>
@@ -15,7 +15,7 @@
 
 <body>
     <div class="banner">
-        
+
     </div>
 </body>
 
