--- a/hezuo.html
+++ b/hezuo.html
@@ -4,9 +4,9 @@
     <title>Document</title>
     <style>
         .banner {
-            width: 800px;
-            height: 800px;
-            background-color: black;
+            width: 1300px;
+            height: 1000px;
+            background-color: red;
             margin: 0 auto;
         }
     </style>
