yl.html 添加了banner

--- a/yl.html
+++ b/yl.html
@@ -6,10 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .banner {
+            width: 500px;
+            height: 300px;
+            background-color: rgb(200, 200, 122);
+            margin: 0 auto;
+        }
+    </style>
 </head>
 
 <body>
     <h2>杨露</h2>
+    <div class="banner">
+
+    </div>
 </body>
 
 </html>
